# airmini-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  output.jsonl  pyproject.toml  requirements.txt  requirements.txtpip-chill
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1da51078015b_add_documents_table_for_vectors.py  20d6473e1b48_remove_messages_table.py  d40e754c2b04_add_timezone_to_datetime_columns.py  f04b5812a8f4_initial_tables.py
app/: config.py  main.py
app/auth/: clerk.py
app/database/: db.py  models.py
app/lib/: graph.py  llm.py  provider.py
app/lib/api/: visa.py  web_search.py
app/lib/graph/: __init__.py  routing.py  state.py  utils.py  workflow.py
app/lib/graph/nodes/: __init__.py  classify.py  generate.py  receive.py  search.py  stream.py  validate.py
app/lib/rag/: __init__.py  config.py  formatters.py  ingestion.py  retriever.py  vectorstore.py
app/lib/rag/ingestion/: __init__.py  core.py  pdf.py  text.py  web.py
app/routers/: __init__.py  admin.py  chat.py  chats.py  messages.py  modules.py  trip_context.py
app/schemas/: chat.py
scripts/: ingest_documents.py  init_db.py  test_db_connection.py  test_graph.py  test_ingestion.py
